--- a/templates/about.html
+++ b/templates/about.html
@@ -4,5 +4,18 @@
     <li><a href="/collections">Collections</a></li>
     <li><a href="/tweets">Tweets</a></li>
     <li class="active"><a href="/about">About</a></li>
-    <li><a href="/contact">Contact</a></li>
+{#    <li><a href="/contact">Contact</a></li>#}
 {% endblock %}
+
+{% block content %}
+    <div class="row">
+        <div class="well col-md-6 col-md-offset-3">
+            <div class="center">
+                <h1>About</h1>
+            </div>
+
+            <p class="lead">TweetID was created by </p>
+        </div>
+    </div>
+{% endblock %}
+
