--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,15 +1,25 @@
-{% macro render_pagination(pagination, endpoint) %}
-  <div class=pagination>
-  {%- for page in pagination.iter_pages() %}
-    {% if page %}
-      {% if page != pagination.page %}
-        <a href="{{ url_for(endpoint, page=page) }}">{{ page }}</a>
-      {% else %}
-        <strong>{{ page }}</strong>
-      {% endif %}
-    {% else %}
-      <span class=ellipsis>…</span>
-    {% endif %}
-  {%- endfor %}
-  </div>
+{% macro render_pagination(pagination, endpoint, name=None) %}
+    <ul class="pagination">
+        {% if pagination.has_prev %}
+            <li><a href="{{ url_for(endpoint, page=pagination.page, name=name) }}">&laquo;</a></li>
+        {% else %}
+            <li class="disabled"><a>&laquo;</a></li>
+        {% endif %}
+        {%- for page in pagination.iter_pages() %}
+            {% if page %}
+                {% if page != pagination.page %}
+                    <li><a href="{{ url_for(endpoint, page=page, name=name) }}">{{ page }}</a></li>
+                {% else %}
+                    <li class="active"><a>{{ page }}</a></li>
+                {% endif %}
+            {% else %}
+                <li class="ellipsis disabled"><a>…</a></li>
+            {% endif %}
+        {%- endfor %}
+        {% if pagination.has_next %}
+            <li><a href="{{ url_for(endpoint, page=pagination.page, name=name) }}">&raquo;</a></li>
+        {% else %}
+            <li class="disabled"><a>&raquo;</a></li>
+        {% endif %}
+    </ul>
 {% endmacro %}
