--- a/templates/tweets.html
+++ b/templates/tweets.html
@@ -5,7 +5,7 @@
     <li><a href="/upload">Upload</a></li>
     <li><a href="/collections">Collections</a></li>
     <li class="active"><a href="/tweets">Tweets</a></li>
-    <li><a href="/about">About</a></li>
+{#    <li><a href="/about">About</a></li>#}
     <li><a href="/contact">Contact</a></li>
 {% endblock %}
 
@@ -13,6 +13,7 @@
     <div class="container">
         <div class="content">
             <h1>Tweets</h1>
+            <p class="tweets-count">{{ tweets.total }} total</p>
             <table class="table table-striped">
                 <thead>
                 <tr>
