--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,7 +5,7 @@
     <li class="active"><a href="/upload">Upload</a></li>
     <li><a href="/collections">Collections</a></li>
     <li><a href="/tweets">Tweets</a></li>
-    <li><a href="/about">About</a></li>
+{#    <li><a href="/about">About</a></li>#}
     <li><a href="/contact">Contact</a></li>
 {% endblock %}
 
