--- a/templates/base.html
+++ b/templates/base.html
@@ -51,5 +51,6 @@
 
 {% block head %}
     {{ super() }}
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     {{ fixes.ie8() }}
 {% endblock %}
