Added tweet json.

--- a/templates/single_tweet.html
+++ b/templates/single_tweet.html
@@ -43,6 +43,10 @@
                         {% endfor %}
                     </dd>
                 {% endif %}
+                <dt>JSON</dt>
+                <dd>
+                    <pre>{{ tweet_json }}</pre>
+                </dd>
             </dl>
         </div>
     </div>
