--- a/templates/completed_merge.html
+++ b/templates/completed_merge.html
@@ -22,6 +22,10 @@
                     <dt>Tags</dt>
                     <dd>{{ c1.tags }}</dd>
                 {% endif %}
+                <dt>First Tweet Date</dt>
+                <dd>{{ first_date }}</dd>
+                <dt>Last Tweet Date</dt>
+                <dd>{{ last_date }}</dd>
             </dl>
         </div>
         <table class="table table-striped">
